--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: whitesmoke;
+    /* background-color: whitesmoke; */
     /* background: linear-gradient(to right, #0f2027, #203a43, #2c5364); */
+    background: linear-gradient(to right, #16222a, #3a6073);
 }
 
 .calculator{
